Global improvements & contact section component

--- a/src/sass/components/_contact.scss
+++ b/src/sass/components/_contact.scss
@@ -3,54 +3,80 @@
 //~~~~~~~~~~~~~~~~~~~~~~~//
 
 
+// .contact-wrapper
+// sass-lint:disable no-color-literals
+$contact-wrapper__background-color: linear-gradient(to left, rgba($color__snow, 1) 0, rgba($color__snow, 1) 66.66666%, rgba($color__white, 1) 66.66666%, rgba($color__white, 1) 100%) !default;
+// sass-lint:enable no-color-literals
 // .contact-form-wrapper
 $contact-form-wrapper__background-color: $color__white !default;
-$contact-form-wrapper__box-shadow: 0 5px 8px 0 rgba($color__black-1, 0.1) !default;
+$contact-form-wrapper__box-shadow: 0 5px 25px 0 rgba($color__black-1, 0.1) !default;
 // .contact-info__list > li
 $contact-info__list__li__border-bottom: 1px solid $divider-color !default;
 
 
 .contact {
     &-wrapper {
-//                background-image: linear-gradient(to top, rgba($color__white, 0.5) 0, rgba($color__white, 0.5) 100%), url(http://dawid-zukowski.pl/img/backgrounds/about-me-bg.jpg);
-//        background-attachment: fixed;
-//                background-position: center;
-//                background-origin: border-box;
-//                background-repeat: no-repeat;
-//                background-size: cover;
+        background-image: $contact-wrapper__background-color;
+        padding-bottom: 153px;
     }
     &-form {
         &-wrapper {
             background-color: $contact-form-wrapper__background-color;
             box-shadow: $contact-form-wrapper__box-shadow;
-            padding: 25px;
-            margin: 25px 0;
+            padding: 35px 40px 45px;
+            margin: 25px 0 10px;
         }
-        &__label {}
+        &-title {
+            font-size: 1.35em;
+            margin: 0.5em 0;
+        }
+        &__label {
+            font-size: 1.05em;
+            font-weight: 600;
+            display: inline-block;
+            margin-bottom: 0.5em;
+        }
         &__input {
             width: 100%;
+            height: 50px;
+            line-height: 50px;
+            padding: 0 20px;
+            border: 1px solid $divider-color;
             &-container {
-                padding: 15px 0;
+                padding: 5px 0;
+                margin: 15px 0;
             }
         }
         &__textarea {
+            min-height: 100px;
             resize: vertical;
+            padding: 20px;
+        }
+        &__label,
+        &__input,
+        &__textarea {
+            display: inline-block;
         }
         &__input,
         &__textarea {
             width: 100%;
         }
         &__button {
+            width: 270px;
             display: block;
-            margin: 15px auto 0;
+            border-width: 2px;
+            margin: 25px auto 0;
         }
     }
     &-info {
+        &-wrapper {
+            padding: 25px 0 10px;
+        }
         &__list {
             list-style: none;
             @extend %no-padding-margin;
             & > li {
-                padding: 25px 0;
+                padding: 35px 0;
                 border-bottom: $contact-info__list__li__border-bottom;
             }
         }
