--- a/src/sass/components/_services.scss
+++ b/src/sass/components/_services.scss
@@ -29,7 +29,7 @@ $services-1-item-button__hover__after__border-color-1: $primary-color !default;
 
 .services {
     &-wrapper {
-        
+        padding-bottom: 157px;
     }
     &-1-item {
         background-color: $services-1-item__background-color-0;
