--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1607,6 +1607,7 @@ html {
   display: inline-block;
   z-index: 0;
   overflow: hidden;
+  font-family: "Source Sans Pro";
   font-size: 1em;
   font-weight: 700;
   text-align: center;
@@ -1794,6 +1795,9 @@ html {
 .icon-cancel::before {
   content: '\e800'; }
 
+.icon-clock::before {
+  content: '\e80d'; }
+
 .icon-code::before {
   content: '\f121'; }
 
@@ -1805,6 +1809,9 @@ html {
 
 .icon-down-open-1::before {
   content: '\e805'; }
+
+.icon-info::before {
+  content: '\f129'; }
 
 .icon-facebook::before {
   content: '\f09a'; }
@@ -2090,7 +2097,7 @@ a.link, a.no-link {
       margin-left: 25px; }
 
 .about-me-wrapper {
-  padding-bottom: 144px; }
+  padding-bottom: 153px; }
 
 .about-me-section {
   padding: 25px 0 10px; }
@@ -2149,6 +2156,9 @@ a.link, a.no-link {
       border-top: 40px solid #2196f3;
       border-bottom: 40px solid #2196f3; }
 
+.services-wrapper {
+  padding-bottom: 157px; }
+
 .services-1-item {
   background-color: #fcfcfc;
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -2194,6 +2204,9 @@ a.link, a.no-link {
   -webkit-transform: scale(1.5);
       -ms-transform: scale(1.5);
           transform: scale(1.5); }
+
+.portfolio-wrapper {
+  padding-bottom: 153px; }
 
 .portfolio-filters__list {
   list-style: none;
@@ -2301,31 +2314,60 @@ a.link, a.no-link {
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
     filter: alpha(opacity=100); }
 
+.contact-wrapper {
+  background-image: linear-gradient(to left, #fafafa 0, #fafafa 66.66666%, white 66.66666%, white 100%);
+  padding-bottom: 153px; }
+
 .contact-form-wrapper {
   background-color: #fff;
-  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.1);
-  padding: 25px;
-  margin: 25px 0; }
+  box-shadow: 0 5px 25px 0 rgba(0, 0, 0, 0.1);
+  padding: 35px 40px 45px;
+  margin: 25px 0 10px; }
+
+.contact-form-title {
+  font-size: 1.35em;
+  margin: 0.5em 0; }
+
+.contact-form__label {
+  font-size: 1.05em;
+  font-weight: 600;
+  display: inline-block;
+  margin-bottom: 0.5em; }
 
 .contact-form__input {
-  width: 100%; }
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
+  padding: 0 20px;
+  border: 1px solid #bdbdbd; }
   .contact-form__input-container {
-    padding: 15px 0; }
+    padding: 5px 0;
+    margin: 15px 0; }
 
 .contact-form__textarea {
-  resize: vertical; }
+  min-height: 100px;
+  resize: vertical;
+  padding: 20px; }
+
+.contact-form__label, .contact-form__input, .contact-form__textarea {
+  display: inline-block; }
 
 .contact-form__input, .contact-form__textarea {
   width: 100%; }
 
 .contact-form__button {
+  width: 270px;
   display: block;
-  margin: 15px auto 0; }
+  border-width: 2px;
+  margin: 25px auto 0; }
+
+.contact-info-wrapper {
+  padding: 25px 0 10px; }
 
 .contact-info__list {
   list-style: none; }
   .contact-info__list > li {
-    padding: 25px 0;
+    padding: 35px 0;
     border-bottom: 1px solid #bdbdbd; }
 
 .heading-separator {
@@ -2423,16 +2465,24 @@ a.link, a.no-link {
   display: block;
   white-space: nowrap; }
 
-.info-title {
-  width: 36.5%; }
-
-.info-description {
-  width: 63.5%; }
-
 .info-title, .info-description {
-  display: inline-block;
+  display: block;
   white-space: normal;
   overflow-wrap: break-word; }
+
+.info-title.i-block, .info-description.i-block {
+  display: inline-block; }
+
+.info-title.i-block {
+  width: 37.85%;
+  vertical-align: top; }
+
+.info-description.i-block {
+  width: 62.15%; }
+
+.info-block.i-block .info-title,
+.info-block.i-block .info-description {
+  display: inline-block; }
 
 .info-link {
   text-decoration: none;
