--- a/src/templates/components/sections/_about-me-information-contact.pug
+++ b/src/templates/components/sections/_about-me-information-contact.pug
@@ -3,7 +3,7 @@
 
 .about-me-section
     header.row.no-gutters.align-items-center.about-me-section-header
-        span.icon.icon-15.icon-phone.about-me-section-icon
+        span.icon.icon-15.icon-info.about-me-section-icon
         span.filling-line
         h3.heading.heading-4.text-center
             | #{data.mainWrapper.aboutMeWrapper.informationContact.h3[0]}
@@ -13,30 +13,30 @@
     .about-me-section-body
         ul.about-me-list
             li.info-block
-                .info-title.text-bolded #{data.mainWrapper.aboutMeWrapper.informationContact.address.title}:
-                .info-description
+                .info-title.i-block.text-bolded #{data.mainWrapper.aboutMeWrapper.informationContact.address.title}:
+                .info-description.i-block
                     | #{data.mainWrapper.aboutMeWrapper.informationContact.address.description}
                     span(aria-hidden="true" class="icon icon-location color-accent-light info-icon")
             li.info-block
-                .info-title.text-bolded #{data.mainWrapper.aboutMeWrapper.informationContact.birthDate.title}:
-                info-description
+                .info-title.i-block.text-bolded #{data.mainWrapper.aboutMeWrapper.informationContact.birthDate.title}:
+                info-description.i-block
                     | #{data.mainWrapper.aboutMeWrapper.informationContact.birthDate.description}
                     span(aria-hidden="true" class="icon icon-birthday color-accent-light info-icon")
             li.info-block
-                .info-title.text-bolded #{data.mainWrapper.aboutMeWrapper.informationContact.email.title}:
-                .info-description
+                .info-title.i-block.text-bolded #{data.mainWrapper.aboutMeWrapper.informationContact.email.title}:
+                .info-description.i-block
                     a(href="mailto:" + data.mainWrapper.aboutMeWrapper.informationContact.email.link class="info-link")
                         | #{data.mainWrapper.aboutMeWrapper.informationContact.email.link}
                         span(aria-hidden="true" class="icon icon-mail-alt color-accent-light info-icon")
             li.info-block
-                .info-title.text-bolded #{data.mainWrapper.aboutMeWrapper.informationContact.website.title}:
-                .info-description
+                .info-title.i-block.text-bolded #{data.mainWrapper.aboutMeWrapper.informationContact.website.title}:
+                .info-description.i-block
                     a(href=data.mainWrapper.aboutMeWrapper.informationContact.website.link class="info-link")
                         | #{data.mainWrapper.aboutMeWrapper.informationContact.website.link}
                         span(aria-hidden="true" class="icon icon-globe color-accent-light info-icon")
             li.info-block
-                .info-title.text-bolded #{data.mainWrapper.aboutMeWrapper.informationContact.phone.title}:
-                .info-description
+                .info-title.i-block.text-bolded #{data.mainWrapper.aboutMeWrapper.informationContact.phone.title}:
+                .info-description.i-block
                     a(href="tel:" + data.mainWrapper.aboutMeWrapper.informationContact.phone.link class="info-link")
                         | #{data.mainWrapper.aboutMeWrapper.informationContact.phone.link}
                         span(aria-hidden="true" class="icon icon-mobile color-accent-light info-icon")
