--- a/src/sass/helpers/_colors.scss
+++ b/src/sass/helpers/_colors.scss
@@ -24,6 +24,7 @@ $color__twitter:     #00aced;
 // Colors of mateusz-archicinski.pl page
 $color__persian-red: #c62828;
 $color__red-orange:  #f44336;
+$color__cinnabar:    #e53935;
 $color__we-peep:     #feccd1;
 $color__denim:       #1565c0;
 $color__dodger-blue: #2196f3;
