--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -130,6 +130,10 @@
     @import 'components/skills';
 
 
+    // *--------- WHITE FRAME ---------*
+    @import 'components/white-frame';
+
+
 // ---------------------
 //     MODULES
 // ---------------------
