--- a/src/templates/components/sections/_services.pug
+++ b/src/templates/components/sections/_services.pug
@@ -17,7 +17,7 @@ section(id="services" class="section services-wrapper")
             .col-12
                 .owl-carousel.owl-theme.owl-carousel-services.owl-carousel-services-js
                     each obj in data.mainWrapper.servicesWrapper.services
-                        .services-1-item.text-center
+                        .white-frame-058001.services-1-item.text-center
                             span(aria-hidden="true" class="icon-img icon-5 icon-services-" + obj.iconName + " services-1-item-icon")
                             h3.heading.heading-4.services-1-item-title= obj.title
                             .heading-separator
